<resources>
    <string name="app_name">PackRat</string>
    <string name="mission_statement">Overthrow Michael!</string>
    <string name="greeting">Hello %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="new_user_button_text">Create Account</string>
    <string name="collection_button_1">Collection 1</string>
    <string name="collection_button_2">Collection 2</string>
    <string name="collection_button_3">Collection 3</string>
    <string name="collection_name_text">Collection Name</string>
    <string name="collection_description_text">Description</string>
    <string name="new_collection_button_text">Create Collection</string>
    <string name="add_item_button_text">Add Item</string>
    <string name="add_item_name_text">Item Name</string>
    <string name="add_item_barcode_text">Item Barcode</string>
    <string name="add_item_Description_text">Item Description</string>
</resources>
